feat: project scaffolding - build.gradle.kts, plugin.xml, empty classes

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,29 +1,101 @@
-<!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
+<!-- Plugin Configuration File -->
+<!-- https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-    <id>com.programtom.intellij-gpt</id>
 
-    <!-- Public plugin name should be written in Title Case.
-         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>GPT Code</name>
+    <!-- ────────────────────────────────────────────
+         기본 정보
+         ──────────────────────────────────────────── -->
+    <id>com.codechecker.plugin</id>
+    <name>Code Quality Checker</name>
+    <version>0.1.0</version>
 
-    <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="tomavelev@programtom.com" url="https://www.programtom.com/dev">Program Tom LTD</vendor>
+    <vendor email="" url="">Internal</vendor>
 
-    <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
-         Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
-         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
-    <description><![CDATA[Plugin that integrates with AI into the IDE]]></description>
+    <description><![CDATA[
+        금융권 Java 코드 품질 검사 플러그인.<br/>
+        에디터에서 코드를 선택하거나 파일 전체를 검사 서버로 전송하고,
+        이슈를 채팅 UI에서 카드 형태로 확인합니다.
+    ]]></description>
 
-    <!-- Product and plugin compatibility requirements.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
+    <!-- IntelliJ IDEA 2024.1 이상 필요 -->
+    <idea-version since-build="241" until-build="251.*"/>
+
+    <!-- 플랫폼 모듈 의존 -->
     <depends>com.intellij.modules.platform</depends>
+    <!-- Java 파일 인식용 (에디터에서 .java 선택 시) -->
+    <depends>com.intellij.modules.java</depends>
 
-    <!-- Extension points defined by the plugin.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
+
+    <!-- ────────────────────────────────────────────
+         확장 포인트
+         ──────────────────────────────────────────── -->
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow id="GPT Chat"
-                    factoryClass="com.programtom.intellijgpt.GptWindowFactory"
-                    anchor="right"/>
+
+        <!-- 1. Tool Window -->
+        <toolWindow
+            id="CodeChecker"
+            anchor="right"
+            factoryClass="com.codechecker.plugin.toolwindow.CodeCheckerToolWindowFactory"
+            icon="AllIcons.Actions.Search"
+            canCloseContents="false"/>
+
+        <!-- 4. Settings (applicationConfigurable) -->
+        <applicationConfigurable
+            id="com.codechecker.plugin.settings"
+            displayName="Code Quality Checker"
+            parentId="tools"
+            instance="com.codechecker.plugin.settings.PluginSettingsConfigurable"/>
+
+        <!-- 5. Application Service -->
+        <applicationService
+            serviceImplementation="com.codechecker.plugin.settings.PluginSettings"/>
+
+        <!-- 6. Notification Group -->
+        <notificationGroup
+            id="CodeChecker.Notification"
+            displayType="BALLOON"
+            isLogByDefault="true"/>
+
     </extensions>
+
+
+    <!-- ────────────────────────────────────────────
+         액션
+         ──────────────────────────────────────────── -->
+    <actions>
+
+        <!-- 2. Action Group: 에디터 우클릭 메뉴에 추가 -->
+        <group
+            id="CodeChecker.ActionGroup"
+            text="Code Quality Checker"
+            description="코드 품질 검사 메뉴"
+            popup="true"
+            icon="AllIcons.Actions.Search">
+
+            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
+
+            <!-- 3-a. 선택 영역 검사 -->
+            <action
+                id="CodeChecker.CheckSelection"
+                class="com.codechecker.plugin.action.CheckSelectionAction"
+                text="선택 영역 검사"
+                description="선택한 코드의 품질을 검사합니다"
+                icon="AllIcons.Actions.FindAndShowNextMatchesWithChecks">
+                <keyboard-shortcut
+                    keymap="$default"
+                    first-keystroke="ctrl shift Q"/>
+            </action>
+
+            <!-- 3-b. 파일 전체 검사 -->
+            <action
+                id="CodeChecker.CheckFile"
+                class="com.codechecker.plugin.action.CheckFileAction"
+                text="파일 전체 검사"
+                description="현재 파일 전체의 코드 품질을 검사합니다"
+                icon="AllIcons.Actions.InspectionsEye"/>
+
+        </group>
+
+    </actions>
+
 </idea-plugin>
